--- a/Debug/DebugIntersect/DebugIntersect.csproj
+++ b/Debug/DebugIntersect/DebugIntersect.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{16EBF2BF-2B71-4B06-80BE-216153E043A5}</ProjectGuid>
+    <ProjectGuid>{44DFE9E0-F9EF-4DDD-9DC2-0917F35D3CE3}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>DebugMatrix</RootNamespace>
-    <AssemblyName>DebugMatrix</AssemblyName>
+    <RootNamespace>DebugIntersect</RootNamespace>
+    <AssemblyName>DebugIntersect</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -56,7 +56,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\RayTracerLib\RayTracerLib.csproj">
+    <ProjectReference Include="..\..\RayTracerLib\RayTracerLib.csproj">
       <Project>{0dbe07ce-b53f-457f-b1f2-3d93dce8551b}</Project>
       <Name>RayTracerLib</Name>
     </ProjectReference>
