--- a/RayTracerLib/RayTracerLib.csproj
+++ b/RayTracerLib/RayTracerLib.csproj
@@ -31,11 +31,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MathNet.Numerics, Version=4.5.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MathNet.Numerics.4.5.1\lib\net461\MathNet.Numerics.dll</HintPath>
+    <Reference Include="MathNet.Numerics, Version=4.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MathNet.Numerics.4.7.0\lib\net461\MathNet.Numerics.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
@@ -46,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Axes.cs" />
     <Compile Include="BoundingBox.cs" />
     <Compile Include="Bounds.cs" />
     <Compile Include="Checked3DPattern.cs" />
@@ -53,6 +55,7 @@
     <Compile Include="CSG.cs" />
     <Compile Include="GradientPattern.cs" />
     <Compile Include="LineSegment.cs" />
+    <Compile Include="MTLFileParser.cs" />
     <Compile Include="OBJFileParser.cs" />
     <Compile Include="Pattern.cs" />
     <Compile Include="RingPattern.cs" />
